# V2rayX

./: .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  LICENSE  README.md  UPDATELOG.md  database-schema.sql  dev-app-update.yml  electron-builder.yml  electron.vite.config.ts  env.d.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  react-router.config.ts  tailwind.config.js  tailwind.config.ts  tsconfig.json  tsconfig.node.json  tsconfig.web.json  vite.config.ts  wdio.conf.ts
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: alpha.yml  build.yml  delete-old-action.yml  publish.yml  release.yml  snap-publish.yml  updater.yml
app/: entry.server.tsx  root.tsx  routes.ts  tailwind.css
app/api/: index.ts  types.ts
app/designs/icons/: custom-icons.ts
app/designs/styles/: index.css
app/lib/: index.ts
app/lib/protocol/: VLess.ts  hysteria2.ts  index.ts  protocol-new.ts  shadowsocks.ts  trojan-new.ts  types.ts  vmess-new.ts
app/modules/: MonacoEditorComponent.tsx
app/modules/auth/pages/: login-form.page.tsx  page.tsx  sign-up.page.tsx
app/modules/base/nav/: main-nav.tsx
app/modules/endpoints/: delete-group-dialog.tsx  import-url-screenshot-dialog.tsx  subscriptions-dialog.tsx
app/modules/endpoints/endpoint-edit/: page.tsx
app/modules/endpoints/endpoint-item/: more-popover.tsx  page.tsx  share-popover.tsx
app/modules/endpoints/endpoint-share/: page.tsx
app/modules/settings/appearance/: page.tsx
app/modules/settings/general/: page.tsx
app/modules/settings/proxies/: page.tsx
app/modules/settings/security/: page.tsx
app/modules/settings/system-proxy/: page.tsx
app/modules/settings/v2ray-configure/: page.tsx
app/routes/_app+/: _index.tsx  _layout.tsx
app/routes/_app+/about/: route.tsx
app/routes/_app+/dashboard/: route.tsx
app/routes/_app+/endpoints/: route.tsx
app/routes/_app+/index/: route.tsx
app/routes/_app+/logs/: route.tsx
app/routes/_app+/settings/: route.tsx
app/routes/_auth+/: _layout.tsx  login.tsx  signup.tsx
app/translations/: de.json  en.json  es.json  fa.json  fr.json  i18n.ts  ja.json  ko.json  ru.json  zh.json
app/utils/: telemetry.ts  theme.util.ts  utils.tsx
electron/: main.ts  preload.ts  renderer.d.ts  store.ts  test.ts  tsconfig.json
electron/renderer/common/: types.ts
environment/: apt_packages.txt
public/: splashscreen.html  test.json
resources/pac/: gfwlist-user.txt  template.pac
scripts/: check.mjs  updatelog.mjs  updater.mjs  utils.mjs
snap/: snapcraft.yaml
src/: App.css  App.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/resources/pac/: template.pac
src-tauri/sql/: create_initial_tables.sql  create_subscriptions_table_etc.sql  delete_all_data.sql
src-tauri/src/: commands.rs  lib.rs  migrations.rs  proxy.rs  sys_tray.rs  telemetry.rs  utils.rs  v2ray_core.rs
src-tauri/src/v2ray_core/v2ray_config/: mod.rs
src/components/: Layout.tsx  Theme.tsx
src/components/navigation/: Navigation.tsx
src/main/: app.ts  bootstrap.ts  index.ts  store.ts
src/main/constant/: index.ts
src/main/lib/bridge/: index.ts
src/main/lib/constant/: index.ts  types.ts
src/main/lib/event-emitter/: index.ts
src/main/lib/hooks/: beforeQuit.ts  beforeReady.ts  index.ts  ready.ts
src/main/lib/logs/: index.ts
src/main/lib/lowdb/: index.ts  initState.ts
src/main/lib/proxy/: index.ts  linuxProxy.ts  macProxy.ts  pac.ts  shadowChecker.ts  winProxy.ts
src/main/lib/utils/: index.ts
src/main/lib/v2ray/: index.ts
src/main/services/auto-update/: index.ts
src/main/services/browser/: createServer.ts  index.ts
src/main/services/hooks/: afterReady.ts  beforeQuit.ts  beforeReady.ts  index.ts  ready.ts
src/main/services/install/: index.ts
src/main/services/state/: index.ts
src/main/services/theme/: index.ts
src/main/services/tray/: Tray.ts  index.ts  template.ts
src/main/setups/: index.ts
src/main/tray/: index.ts
src/main/utils/: appUpdater.ts  logger.ts
src/main/utils/install/: index.ts
src/main/utils/logs/: index.ts
src/main/utils/proxy/: index.ts  linuxProxy.ts  macProxy.ts  pac.ts  winProxy.ts
src/main/utils/v2ray/: index.ts  manage.ts
src/main/v2ray/: manage.ts
src/pages/: Config.tsx  Home.tsx  Logs.tsx  Servers.tsx
src/pages/servers/: Servers.tsx
src/pages/servers/components/: AddServer.tsx
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.css  App.tsx  main.tsx
src/renderer/src/assets/: index.css
src/renderer/src/components/: ContextMenu.tsx  InfiniteLogTable.tsx  InfiniteTable.tsx  Install.tsx  Layout.tsx  Notice.tsx  PopoverMenu.tsx  Theme.tsx  Versions.tsx
src/renderer/src/constant/: index.ts  types.ts
src/renderer/src/pages/: About.tsx  Home.tsx  Logs.tsx  Settings.tsx
src/renderer/src/router/: index.tsx
src/store/: index.ts  navigationSlice.ts  serversSlice.ts
test/: README.md  tsconfig.json
test/smoke/auto-update/: README.md  server.js
test/specs/: aboutPageAppVersion.e2e.ts  test.e2e.ts  test2.e2e.ts
translations/: en.json  fr.json  i18n.ts  zh.json
(+99 files in other folders)
