[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.1.0", features = [
	"macos-private-api",
	"tray-icon",
	"devtools",
] }
tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
chrono = "0.4.39"
anyhow = "1.0.95"
lazy_static = "1.5.0"
directories = "5.0.1"
sentry = "0.35.0"
tokio = "1.42.0"
tauri-plugin-shell = "2.2.0"
tauri-plugin-notification = "2.2.0"
sqlx = "0.8.2"
uuid = { version = "1", features = ["serde", "v7"] }
tauri-plugin-fs = { version = "2.2.0", features = ["watch"] }
rust-i18n = "3.1.2"
tauri-plugin-clipboard-manager = "2.2.0"
dotenvy = "0.15.7"
tauri-plugin-opener = "2.2.3"
dotenvy_macro = "0.15.7"
tauri-plugin-process = "2.2.0"
tauri-plugin-dialog = "2.0.0-beta"
warp = "0.3.7"
portpicker = "0.1.1"
tauri-plugin-os = "2.2.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52.0"


[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"

[target.'cfg(any(target_os = "macos", windows, target_os = "linux"))'.dependencies]
tauri-plugin-updater = "2.3.1"
